get post by id method
