# doc/api/openapi.json
@@ -1917,6 +1917,124 @@
         }
       }
     },
+    "/posts/single-post/{post_id}": {
+      "get": {
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
+        "summary": "Get post by id",
+        "description": "This method returns post by id",
+        "operationId": "getPostsById",
+        "tags": ["Posts"],
+        "parameters": [
+          {
+            "name": "post_id",
+            "in": "path",
+            "description": "post id",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Success",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "post_id": {
+                      "type": "integer"
+                    },
+                    "username": {
+                      "type": "string"
+                    },
+                    "avatar_url": {
+                      "type": "string"
+                    },
+                    "wall_id": {
+                      "type": "integer"
+                    },
+                    "post_text": {
+                      "type": "string"
+                    },
+                    "created_at": {
+                      "type": "text"
+                    }
+                  },
+                  "example": {
+                    "post_id": 6,
+                    "username": "gervant",
+                    "avatar_url": "https://i.ibb.co/t33h8S6/witcher.jpg",
+                    "wall_id": 6,
+                    "post_text": "Хэллоу ворлд!",
+                    "created_at": "2024-01-19T11:24:44.886Z"
+                  }
+                }
+              }
+            }
+          },
+          "401": {
+            "description": "Unauthorized - Invalid credentials",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "error": {
+                      "type": "string"
+                    }
+                  },
+                  "example": {
+                    "message": "Not authorized"
+                  }
+                }
+              }
+            }
+          },
+          "404": {
+            "description": "Post not found",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "error": {
+                      "type": "string"
+                    }
+                  },
+                  "example": {
+                    "message": "Post not found"
+                  }
+                }
+              }
+            }
+          },
+          "500": {
+            "description": "Server error",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "message": {
+                      "type": "string"
+                    }
+                  },
+                  "example": {
+                    "message": "Server error"
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    },
     "/walls/group-walls": {
       "get": {
         "security": [
